--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
     "illuminate/support": "^5.0,<5.5"
   },
   "require-dev": {
-    "phpunit/phpunit": "4.*"
+    "phpunit/phpunit": "4.*",
+    "tightenco/mailthief": "^0.3.5"
   },
   "autoload": {
     "psr-4": {
